--- a/Review Carousel/index.html
+++ b/Review Carousel/index.html
@@ -25,6 +25,13 @@
             <button id=random>Surprice Me</button>
         </div>
     </div>
+    <style>
+   .button-container button {
+     margin: 1rem 0 0;
+     width: 50px;
+     height: 50px;
+   }
+    </style>
     <script src="./script.js"></script>
 </body>
 </html>
